--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -7,16 +7,13 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://47.105.111.80:8761/eureka/
 
 zuul:
   routes:
-    hiapi:
-      path: /hiapi/**
-      serviceId: eureka-client
-    ribbonapi:
-      path: /ribbonapi/**
-      serviceId: eureka-ribbon-client
-    feignapi:
-      path: /feignapi/**
-      serviceId: eureka-feign-client
+    business:
+      path: /business/**
+#      serviceId: business
+    user-center:
+      path: /user-center/**
+#      serviceId: user-center
